--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,5 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 32px;
   color: white;
+  background-image: url("https://images.unsplash.com/photo-1498496294664-d9372eb521f3?auto=format&fit=crop&w=1050&q=80");
 }
