--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,5 @@ body {
   font-size: 32px;
   color: white;
   background-image: url("https://images.unsplash.com/photo-1498496294664-d9372eb521f3?auto=format&fit=crop&w=1050&q=80");
+  background-repeat: no-repeat;
 }
