--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,5 @@ body {
   background-image: url("https://images.unsplash.com/photo-1498496294664-d9372eb521f3?auto=format&fit=crop&w=1050&q=80");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
 }
