Create media query for medium devices and set width of box

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,12 @@ body {
 }
 
 } /* End small devices */
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+.box {
+  width: 30%;
+}
+
+} /* End medium devices */
