Create media query for large devices

--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,9 @@ body {
 }
 
 } /* End medium devices */
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
+
+} /* End large devices */
